# DX12Engine

./: CMakeLists.txt  DirectX12 Test.sln  Main.cpp
DirectX12 Test/: CommandQueue.cpp  CommandQueue.h  CommandQueueManager.h  ConstantBuffer.cpp  ConstantBuffer.h  ConstantBufferData.h  DescriptorHeap.cpp  DescriptorHeapHandle.h  DescriptorHeapManager.cpp  DirectX12 Test.vcxproj  DirectX12 Test.vcxproj.filters  EngineUtils.h  GPUResource.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Mesh.h  ModelLoader.h  PixelShader.hlsl  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderObject.cpp  RenderObject.h  RenderPassDescriptorHeap.cpp  RenderWindow.cpp  RenderWindow.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  StagingDescriptorHeap.cpp  StagingDescriptorHeap.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.hlsl
DirectX12 Test/src/: ClientApplication.cpp  Main.cpp
DirectX12 Test/src/DX12Engine/Buffers/: ConstantBuffer.cpp  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  LightBuffer.cpp  LightBuffer.h  VertexBuffer.h
DirectX12 Test/src/DX12Engine/Heaps/: DescriptorHeap.h  DescriptorHeapManager.cpp  DescriptorHeapManager.h
DirectX12 Test/src/DX12Engine/IO/: ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
DirectX12 Test/src/DX12Engine/Input/: Camera.cpp
DirectX12 Test/src/DX12Engine/Queues/: CommandQueue.cpp  CommandQueue.h  CommandQueueManager.cpp  CommandQueueManager.h
res/Materials/skybox/: skybox2_irradiance.dds  skybox_irradiance.dds
src/: ClientApplication.cpp  ClientApplication.h  Main.cpp
src/DX12Engine/: Application.h  Launcher.h
src/DX12Engine/Buffers/: ConstantBuffer.cpp  LightBuffer.h
src/DX12Engine/Entity/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.cpp  RenderComponent.h
src/DX12Engine/Heaps/: DescriptorHeap.cpp  DescriptorHeap.h  RenderPassDescriptorHeap.h
src/DX12Engine/IO/: TextureLoader.cpp
src/DX12Engine/Input/: Camera.cpp  Camera.h
src/DX12Engine/Physics/: AABoundingBox.h  CollisionMesh.h  PhysicsEngine.cpp  PhysicsEngine.h
src/DX12Engine/Queues/: CommandQueue.h
src/DX12Engine/Rendering/: GPUUploader.cpp  GPUUploader.h  PipelineStateCache.h  RenderContext.cpp  RenderContext.h  RenderObject.cpp  RenderObject.h  RenderPipelineConfig.h  RenderWindow.cpp  Renderer.cpp  Renderer.h  RootSignatureCache.h
src/DX12Engine/Resources/: GPUResource.cpp  GPUResource.h  Light.cpp  Light.h  RenderTexture.h  ResourceManager.cpp  ResourceManager.h  Shader.h  Texture.h
src/DX12Engine/Shaders/: BasicLighting_VS.hlsl  Geometry_VS.hlsl  PBRLightingDeferred_PS.hlsl  PBRLighting_VS.hlsl  RenderTriangle_VS.hlsl  ShadowMap_VS.hlsl
src/DX12Engine/Utils/: Constants.h  EngineUtils.h
(+97 files in other folders)
